--- a/main-page.html
+++ b/main-page.html
@@ -115,15 +115,40 @@
 				</div>
 
 				<div class="section-2-content">
-					<div class="content">
-						<div class="circle"></div>
-						<div class="title-content">
-							<p>TRADITIONAL GAMES</p>
+					<div>
+						<div class="content">
+							<div class="circle"></div>
+							<div class="title-content">
+								<p>TRADITIONAL GAMES</p>
+							</div>
 						</div>
-					</div>
 						<div class="text-content">
 							<p>If you miss your childhood, we provide many traditional games here!</p>
 						</div>
+					</div>
+
+					<div>
+						<div class="content">
+							<div class="circle-null"></div>
+							<div class="title-content">
+								<p>GAME SUIT</p>
+							</div>
+						</div>
+						<div class="text-content">
+							<p></p>
+						</div>
+					</div>
+					<div>
+						<div class="content">
+							<div class="circle-null"></div>
+							<div class="title-content">
+								<p>TBD</p>
+							</div>
+						</div>
+						<div class="text-content">
+							<p></p>
+						</div>
+					</div>
 				</div>
 
 			</div>
@@ -131,7 +156,79 @@
 		</section>
 		<!-- end of section 3 -->
 
+		<!-- section-4 start -->
+		<section id="section-4">
+			
+			<div class="section-4-wrapper">
+				
+				<div class="section-4-title">
+					<p>SYSTEM REQUIREMENTS</p>
+				</div>
 
+
+				<div class="table">
+					<table style="width:100%">
+
+					  	<tr>
+						    <td class="table-square">
+								<div class="table-title">
+									<p>OS:</p>
+								</div>
+								<div class="table-content">
+									<p>Windows 7 64-bit only 
+									<br>
+									(No OSX support at this time)</p>
+								</div>
+						    </td>
+						    <td class="table-square">
+								<div class="table-title">
+									<p>PROCESSOR:</p>
+								</div>
+								<div class="table-content">
+									<p>Intel Core 2 Duo @ 2.4 GHz or 
+									<br>
+									AMD Athlon X2 @ 2.8 GHz</p>
+								</div>
+						    </td>
+					  	</tr>
+
+					  	<tr>
+						    <td class="table-square">
+								<div class="table-title">
+									<p>MEMORY:</p>
+								</div>
+								<div class="table-content">
+									<p>4 GB RAM</p>
+								</div>					
+						    </td>
+						    <td class="table-square">
+								<div class="table-title">
+									<p>STORAGE:</p>
+								</div>
+								<div class="table-content">
+									<p>8 GB available space</p>
+								</div>						 
+						    </td>
+					  	</tr>
+					</table>
+
+					<table style="width:100%" class="table-2">
+					  	<tr>
+					  		<td class="table-square">
+								<div class="table-title">
+									<p>GRAPHICS:</p>
+								</div>
+								<div class="table-content">
+									<p>NVIDIA GeForce GTX 660 2GB or <br> AMD Radeon HD 7850 2GB DirectX11 (Shader Model 5)</p>
+								</div>  			
+					  		</td>
+					  	</tr>
+					</table>
+					
+				</div>
+			</div>
+
+		</section>
 
 	</div>
 </body>
