mengganti scroll down menjadi lebih HD

--- a/main-page.html
+++ b/main-page.html
@@ -61,7 +61,7 @@
 				</div>
 
 				<div class="arrow">
-					<a href="#sesi-2"><img src="image/scroll-down.png"></a>
+					<a href="#section-2"><img src="image/scroll-down.svg"></a>
 				</div>
 
 			</div>
@@ -229,6 +229,18 @@
 			</div>
 
 		</section>
+		<!-- end of section-4 -->
+
+		<!-- section-5 start -->
+
+		<section id="section-5">
+
+			<div class="section-5-wrapper">
+				
+			</div>
+			
+		</section>
+
 
 	</div>
 </body>
