--- a/index.html
+++ b/index.html
@@ -249,17 +249,23 @@
 				</div>
 
 				<div class="wrapper-right">
-					<div class="box">
+
+					<!-- photo-1 -->
+					<section id="box-1" class="box">
 						<div class="box-top">
 							<div class="box-top-flex">
 								<div class="circle-photo">
-									
+									<img src="image/photo-1.jpg">
 								</div>
 								<div class="name-box">
 									<div class="name">Evan Lahti</div>
 									<div class="profession">PC Gamer</div>
 								</div>
 							</div>
+							<div class="img-twitter">
+								<img src="image/twitter.svg">
+							</div>
+
 						</div>
 						<div class="box-bot">
 							<div class="box-bot-flex">
@@ -271,14 +277,68 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</section>
+
+					<!-- photo-2 -->
+					<section id="box-2" class="box">
+						<div class="box-top">
+							<div class="box-top-flex">
+								<div class="circle-photo">
+									<img src="image/photo-2.jpg">
+								</div>
+								<div class="name-box">
+									<div class="name">Jada Griffin</div>
+									<div class="profession">Nerdreactor</div>
+								</div>
+							</div>
+							<div class="img-twitter">
+								<img src="image/twitter.svg">
+							</div>
+
+						</div>
+						<div class="box-bot">
+							<div class="box-bot-flex">
+								<div class="review">
+									“The next big thing in the world of streaming and survival games.”
+								</div>
+								<div class="date">
+									December 21, 2018
+								</div>
+							</div>
+						</div>
+					</section>
+
+					<!-- photo-3 -->
+					<section id="box-1" class="box">
+						<div class="box-top">
+							<div class="box-top-flex">
+								<div class="circle-photo">
+									<img src="image/photo-3.jpg">
+								</div>
+								<div class="name-box">
+									<div class="name">Jada Griffin</div>
+									<div class="profession">Nerdreactor</div>
+								</div>
+							</div>
+							<div class="img-twitter">
+								<img src="image/twitter.svg">
+							</div>
+
+						</div>
+						<div class="box-bot">
+							<div class="box-bot-flex">
+								<div class="review">
+									“Snoop Dogg Playing The Wildly Entertaining ‘SOS’ Is Ridiculous.”
+								</div>
+								<div class="date">
+									December 24, 2018
+								</div>
+							</div>
+						</div>
+					</section>
+
+
 				</div>
-
-
-
-
-
-
 			</div>
 			
 		</section>
