--- a/index.html
+++ b/index.html
@@ -336,14 +336,58 @@
 							</div>
 						</div>
 					</section>
-
-
 				</div>
 			</div>
-			
+		</section>
+		<!-- end of section-5 -->
+
+		<!-- section-6 start -->
+		<section id="section-6">
+			<div class="section-6-wrapper">
+
+				<div class="img">
+					<img src="image/image_newsletter.png">
+				</div>
+				
+				<div class="wrapper-left-6">
+					<!-- Kosong -->
+				</div>
+
+				<div class="wrapper-for-wrapper">
+					<div class="wrapper-right-6">
+						<div class="text-1">
+							<p>Want to stay in touch?</p>
+						</div>
+
+						<div class="text-2">
+							<p>NEWSLETTER SUBSCRIBE</p>
+						</div>
+
+						<div class="text-3">
+							<p>In order to start receiving our news, all you have to do is enter your email address. Everything else will be taken care of by us. We will send you emails containing information about game. We don’t spam.</p>
+						</div>
+
+						<div class="subscribe-container">
+							
+							<div class="input">
+								<input type="text" placeholder="Enter your email address">
+							</div>
+
+							<div class="subscribe-button">
+								<a href="#">Subscribe now</a>
+							</div>
+
+						</div>
+
+					</div>
+				</div>
+
+			</div>
 		</section>
 
-
+		<footer>
+			
+		</footer>
 	</div>
 </body>
 </html>
