--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 						<p>TOP SCORES</p>
 					</div>	
 					<div class="score-info">
-						<p>This top score from various games provided <br>on this platform</p>
+						<p>This top score from various games provided on this platform</p>
 					</div>
 
 					<div class="button-more">
